--- a/Quesstionaire/Frontend_new/quiz/src/components/quiz/quiz.css
+++ b/Quesstionaire/Frontend_new/quiz/src/components/quiz/quiz.css
@@ -21,7 +21,6 @@
     height: 2px;
     border: none;
     background: #707070;
-
 }
 
 .conntainer h1{
@@ -41,12 +40,13 @@
 .conntainer ul li{
     display: flex;
     align-self: center;
+    align-items: center;
     height: 50px;
     padding-left: 15px;
     border: 1px solid #686868;
     border-radius: 8px;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
 }
 
@@ -60,12 +60,6 @@
     font-weight: 500;
     border-radius: 8px;
     cursor: pointer;
-}
-
-.conntainer .top-right-button{
-    position: absolute;
-    top: 130px;
-    right: 325px;
 }
 
 .conntainer .index{
